[package]
name = "refraction"
version = "0.1.0"
authors = ["Alexander Altman <alexanderaltman@me.com>"]
description = "A general-purpose lens library for Rust."
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/pthariensflame/refraction"
repository = "https://github.com/pthariensflame/refraction"
documentation = "https://docs.rs/crate/refraction"
keywords = ["lens", "prism", "isomorphism", "property"]

[dependencies]

[dev-dependencies]
# quickcheck = "*"

[features]
nightly = []
