[package]
name = "refraction"
version = "0.1.3"
authors = ["Alexander Altman <alexanderaltman@me.com>"]
description = "A general-purpose lens library for Rust."
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/pthariensflame/refraction"
repository = "https://github.com/pthariensflame/refraction"
documentation = "https://docs.rs/crate/refraction"
keywords = ["lens", "prism", "isomorphism", "lenticuloid", "property"]

[dependencies]
nodrop = "0.1.8"

[dev-dependencies]
# quickcheck = "*"

[features]
nightly = ["nodrop/use_union"]
